maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:8: error: 'case' expected but identifier found.
      a == 1 
      ^